feat(fixtures): declare subject defaults
